# Pkd-tree

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  beatles.txt  bugs.md  build_cmd.sh  compile_flags.txt  data_generate.cpp  input.txt  input2.txt  kdTree.cpp  kdTree.h  run_transfer.sh  solved_bugs.md  test.cpp  transfer.sh
benchmark/craft/: analysis-opt-1800.Rmd
benchmark/craft_var_dim/: summary.csv
benchmark/craft_var_dim/100000000_2/: cgal_res.out  res.out  res_parallel.out  res_serial.out
benchmark/craft_var_dim/100000000_3/: cgal_res.out  res.out  res_parallel.out  res_serial.out
benchmark/craft_var_dim/100000000_5/: cgal_res.out  res.out  res_serial.out
benchmark/craft_var_dim/100000000_7/: cgal_res.out  res.out  res_serial.out
benchmark/craft_var_dim/100000000_9/: cgal_res.out  res.out  res_serial.out
benchmark/craft_var_dim/1000000_2/: res.out
benchmark/craft_var_dim/100000_10/: Correct.out  cgal_res.out  res.out  res_karray.out
benchmark/craft_var_dim/100000_12/: cgal_res.out  res.out  res_karray.out
benchmark/craft_var_dim/100000_15/: cgal_res.out  res.out  res_karray.out
benchmark/craft_var_dim/100000_18/: cgal_res.out  res.out
benchmark/craft_var_dim/100000_2/: cgal_res.out  res.out  res_karray.out
benchmark/craft_var_dim/100000_20/: cgal_res.out  res.out
benchmark/craft_var_dim/100000_25/: cgal_res.out  res.out
benchmark/craft_var_dim/100000_3/: cgal_res.out  res.out  res_karray.out
benchmark/craft_var_dim/100000_5/: cgal_res.out  res.out  res_karray.out
benchmark/craft_var_dim/100000_7/: cgal_res.out  res.out  res_karray.out
benchmark/craft_var_dim/100000_9/: cgal_res.out  res.out  res_karray.out
benchmark/craft_var_dim/10000_2/: cgal_res_parallel.out  cgal_res_serial.out  res_parallel.out  res_serial.out
benchmark/craft_var_dim/10000_3/: cgal_res_parallel.out  cgal_res_serial.out  res_parallel.out  res_serial.out
benchmark/craft_var_dim/10000_5/: cgal_res_parallel.out  cgal_res_serial.out  res_parallel.out  res_serial.out
benchmark/craft_var_dim/10000_7/: cgal_res_parallel.out  cgal_res_serial.out  res_parallel.out  res_serial.out
benchmark/craft_var_dim/10000_9/: cgal_res_parallel.out  cgal_res_serial.out  res_parallel.out  res_serial.out
benchmark/craft_var_dim_integer/100000000_2/: res_bounded_queue.out
benchmark/craft_var_dim_integer/100000000_3/: res_bounded_queue.out
benchmark/craft_var_dim_integer/100000000_5/: res_bounded_queue.out
benchmark/craft_var_dim_integer/100000000_7/: res_bounded_queue.out
benchmark/real_world/: batch_update.out  cgal_real_world_range_query.out  cgal_real_world_range_query_perf.out  cgal_real_world_range_query_perf_after.out  osm_month_test.out  osm_month_zdtree.out  osm_year_test.out  osm_year_zdtree.out  res_real_world.out  res_real_world_range_query.out  res_real_world_range_query_perf.out  res_real_world_range_query_perf_after.out  res_real_world_update.out  zdtree_real_world.out
benchmark/script/: analysis.Rmd  cgal.csv  merge.py  my_kd.csv
cgal/: cgal_knn.cpp
docs/: cgal kd tree.md  optimization.md  solved_bugs.md
docs/r cheat sheets/: all_in_one.sh
include/cpdd/: basic_point.h  comparator.h  cpdd.h  kdTreeParallel.h
include/pdd/: basic_node.h  basic_point.h  comparator.h  kdTreeParallel.h  kdTreeParallel.hpp  nn_search_helpers.h  parlay_headers.h  utility.h
parlaylib/examples/: kth_smallest.cpp  kth_smallest.h
script/: analysis.Rmd  analysis.rmd  cgal.csv  checkCorrect.bash  checkCorrect.sh  core.sh  download.sh  gen_ss_varden.bash  gen_ss_varden.sh  gen_table.Rmd  kill_script.sh  log.txt  make_graph.sh  merge.py  merge_highDim.py  merge_range_querys.py  merge_scalability.py  merge_summary.py  merge_summary_3inba.py  merge_vary.py  my_kd.csv  my_kd_wrap.csv  osm.py  perf.txt  perf_pre.txt  perf_pre_uniform.txt  perf_uniform.txt  run.sh  run_all.sh  run_batch_knn.sh  run_batch_update.sh  run_dim.bash  run_dim.sh  run_highDim.sh  run_highdim.sh  run_inba_perf.sh  run_inba_ratio.sh  run_inba_ratio_count.sh  run_inba_total_size.sh  run_leave.bash  (+27 more)
script/backup_data/: cgal.csv  my_kd.csv  my_kd_proto.csv  test.csv  zdtree.csv
script/data/: 1e9.csv  build.csv  cgal.csv  count.csv  decreBuild.csv  delete.csv  highDim.csv  inba_ratio.out  inba_ratio_knn.out  inba_ratio_knn_ave_max.out  inba_ratio_knn_ave_max_again.out  inba_ratio_knn_ave_max_uniform.out  inba_ratio_knn_max.csv  inba_ratio_knn_max.out  inba_ratio_max.out  inba_ratio_perf_incre.out  inba_ratio_perf_simple.out  inba_ratio_perf_total_size.out  inba_ratio_perf_total_size_1u9v.out  inba_ratio_rc.out  inba_ratio_rc_max.csv  increBuild.csv  increKNN.csv  insert.csv  knn.csv  my_kd.csv  my_kd_wrap.csv  real_world.csv  remove_technique.out  remove_technique_cache.out  remove_technique_cache_read_point.out  result.csv  rquery.csv  scalability.csv  second.csv  single_wrap.csv  summarize.csv  summary.csv  summary_3inba.csv  test.csv  (+8 more)
script/logs/: memory_single_read.txt  perf_inba_vary.out  perf_inba_vary_pre.out  perf_pre_uniform.txt  perf_range_query.txt  perf_real_gen.out  perf_real_gen_serial.out  perf_real_total.out  perf_real_total_serial.out  perf_real_total_serial_bb.out  perf_time.txt  perf_time_uniform.txt  pre_memory_single_read.txt  re_perf.txt  re_perf_pre.txt
script/plots/: analysis.rmd  draw.rmd  gen_table.rmd
src/: cgal.cpp  checkCorrect.cpp  checkCorrectParallel.cpp  data_generate.cpp  kdTree.cpp  kdTree.h  kdTreeParallel.cpp  kdTreeParallel.h  rangeQuery.cpp  test.cpp  testFramework.h  utility.h
src/common/: time_loop.h
src_x/: cgal.cpp  cgal_knn.cpp  chan.cpp  quicksort.cpp  zdtree.cpp
src_x/zdtree/: k_nearest_neighbors.h  knn.cpp  knn.h  neighbors.h  neighborsTime.C  oct_tree.h  qknn.hpp
tests/: cgal.cpp  checkCorrectParallel.cpp  data_generate.cpp  kdTree.h  rtree.cpp  test.cpp  testFramework.h  testFramework_dkdt.h  testFramework_pg.h  test_dkdt.cpp  test_pg.cpp
tests/common/: time_loop.h
tests/parlaylib/: Makefile  ParlayConfigVersion.cmake  cmake_install.cmake
tests/recycle_bin/: checkCorrect.cpp
tests/zdtree/: neighborsTime.C
(+684 files in other folders)
